# LocalCraft

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
src/: App.vue  main.ts  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json  desktop.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/file/: file_manager.rs  mod.rs
src-tauri/src/java/: java_manager.rs  mod.rs
src-tauri/src/mods/: mod.rs  mods_manager.rs
src-tauri/src/server/: mod.rs  server.rs  server_manager.rs  tunnel_manager.rs
src-tauri/src/software/: mod.rs  software_manager.rs
src/components/: ModrinthIcon.vue  OptionsModal.vue
src/components/icons/: GithubIcon.vue  ModrinthIcon.vue
src/components/java/: JavaInstallModal.vue  JavaItem.vue
src/components/navbar/: Navbar.vue  NavbarItem.vue
src/components/servers/: ServerCreateModal.vue  ServerDeleteModal.vue  ServerItem.vue  ServerNavItem.vue  ServerSettingsModal.vue
src/components/sidebar/: Sidebar.vue  SidebarItem.vue
src/components/ui/: Button.vue  Loader.vue  Modal.vue  Select.vue  TunnelModal.vue
src/css/: global.css
src/layout/: Layout.vue
src/router/: index.ts
src/server/: serverConsoleLogs.ts
src/titlebar/: Titlebar.vue
src/views/: AboutView.vue  HomeView.vue  JavaView.vue  ServersView.vue
src/views/manage/: ServerConsoleView.vue  ServerFilesView.vue  ServerManageView.vue  ServerModsView.vue  ServerWhitelistView.vue
(+6 files in other folders)
