[package]
name = "LocalCraft"
version = "0.1.0"
description = "App for managing local minecraft servers"
authors = ["moiCR"]
edition = "2021"

[lib]
name = "localcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = "4.0.4"
uuid = { version = "1.23.0", features = ["v4"] }
directories = "6.0.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
zip = "8.5.0"
tar = "0.4.45"
flate2 = "1.1.9"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
